RESOLVED FIXED227507
WebKit_iosmac build failure: SystemPreviewSPI.h:29:9: fatal error: 'AssetViewer/ARQuickLookWebKitItem.h' file not found
https://bugs.webkit.org/show_bug.cgi?id=227507
Summary WebKit_iosmac build failure: SystemPreviewSPI.h:29:9: fatal error: 'AssetView...
Antoine Quint
Reported 2021-06-29 14:32:45 PDT
WebKit_iosmac build failure: SystemPreviewSPI.h:29:9: fatal error: 'AssetViewer/ARQuickLookWebKitItem.h' file not found
Attachments
Patch (3.42 KB, patch)
2021-06-29 14:35 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2021-06-29 14:35:24 PDT
Antoine Quint
Comment 2 2021-06-29 14:35:29 PDT
EWS
Comment 3 2021-06-29 15:50:24 PDT
Committed r279392 (239257@main): <https://commits.webkit.org/239257@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432532 [details].
Note You need to log in before you can comment on or make changes to this bug.